--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
