--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "focus-formik-error": "^1.1.0",
     "formik": "^2.2.9",
+    "formik-focus-error": "^0.0.5",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-datepicker": "^4.3.0",
